<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="20dp"
        android:text="@string/current_budget"
        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="51dp"
        android:text="@string/previous_purchases"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2"
        app:layout_constraintVertical_bias="0.482" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="308dp"
        android:layout_weight="1"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:stretchColumns="0,1,2">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF">

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/place"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/amount"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="#000000">


                </TableRow>
            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal" />
            </TableRow>



        </TableLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="176dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log Out" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>